# project1-energy-analysis

./: AI_USAGE.md  README.md  pyproject.toml  requirements.txt  video_link.md
config/: config.yaml
dashboards/: app.py
data/processed/: data_quality_report.json  data_quality_report.txt  merged_data.csv
data/raw/: energy_raw.csv  weather_raw.csv
src/: data_fetcher.py  data_processor.py  pipeline.py
tests/: test_pipeline.py
