[tool.poetry]
name = "project1-energy-analysis"
version = "0.1.0"
description = "Energy analysis dashboard"
authors = ["Francis Happy <francisbucci2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"  
streamlit = "^1.22.0"
plotly = "^5.13.0"
statsmodels = "^0.13.5"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"







