[tool.poetry]
name = "project1-energy-analysis"
version = "0.1.0"
description = "A Streamlit dashboard for US weather and energy analysis."
authors = ["Francis Happy <francis.happy@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = ">=1.33.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
requests = ">=2.31.0"
plotly = ">=5.0.0"

[tool.poetry.packages]
include = [
    { from = "dashboards", to = "dashboards" }
]

[build-system]
requires = ["poetry-core>=1.0.0"] 
build-backend = "poetry.core.masonry.api"



